# bbc-openstack-plugins

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
bbc_openstack_plugins/glance_store/_drivers/: http.py
bbc_openstack_plugins/nova/scheduler/filters/: bbc_disk_filter.py
