[metadata]
name = bbc-openstack-plugins
version = 0.0.2
summary = various plugins for openstack
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = http://www.blueboxcloud.com/
classifier =
    Operating System :: POSIX :: Linux
    Programming Lanuage :: Python
    Programming Lanuage :: Python :: 2.7

[pbr]
warnerrors = True

[files]
packages =
    bbc_openstack_plugins

[entry_points]
glance_store.drivers =
    bbchttp = bbc_openstack_plugins.glance_store._drivers.http:Store
nova.scheduler.filters =
    BBCDiskFilter = bbc_openstack_plugins.nova.scheduler.filters.bbc_disk_filter:BBCDiskFilter
